# infiniReversi

./: CMakeLists.txt  graphic_engine.c  graphic_engine.h  main.c  reversi.c  reversi.h  reversi_game_engine.c  reversi_game_engine.h
cjson/: CMakeLists.txt
libs/ai/: CMakeLists.txt  CMakeLists.txt.dependency.in  trainer_ai.c  trainer_ai.h
libs/cjson/: CMakeLists.txt
libs/engine/: CMakeLists.txt  reversi_game_engine.c  reversi_game_engine.h
libs/graphic/: CMakeLists.txt  graphic_engine.c  graphic_engine.h
